Ajuste en modulo principal de ventas + ajustes filtros en modulo de historial de ventas

--- a/src/app/view/ventas/generar-venta/generar-venta.component.html
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.html
@@ -575,8 +575,7 @@
                                     <div class="form-group">
                                         <label class="form-label">
                                             <i class="bi bi-person"></i>
-                                            {{ clienteSinPaciente.tipoPersona === 'natural' ? 'Nombre Completo' : 'Razón
-                                            Social' }}
+                                            {{ clienteSinPaciente.tipoPersona === 'natural' ? 'Nombre Completo' : 'Razón Social' }}
                                         </label>
                                         <input type="text" class="form-control modern-input"
                                             style="margin-bottom: -10px !important;"
@@ -653,8 +652,7 @@
                                                 'Los datos fueron autocompletados desde nuestra base de datos' :
                                                 validandoCliente ?
                                                 'Buscando información del cliente...' :
-                                                'Complete los datos manualmente. El cliente será registrado al generar
-                                                la venta.' }}
+                                                'Complete los datos manualmente. El cliente será registrado al generar la venta.' }}
                                             </div>
                                         </div>
                                     </div>
