Ajuste venta para cashea

--- a/src/app/view/ventas/generar-venta/generar-venta.component.html
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.html
@@ -1783,7 +1783,7 @@
                 </div>
             </div>
 
-            <!-- Footer del Modal Recibo - Corregido -->
+            <!-- Footer del Modal Recibo -->
             <div class="modal-footer-recibo">
                 <div class="footer-actions">
                     <div class="footer-section-left">
